Bug #25329 ndb: node dies with signal 8 during node restart
Submitted: 29 Dec 2006 12:06 Modified: 25 Jan 2007 7:41
Reporter: Tomas Ulin Email Updates:
Status: Closed
Category:Server: ClusterRep Severity:S1 (Critical)
Version:5.1 OS:
Assigned to: Jonas Oreland Target Version:

[29 Dec 2006 12:06] Tomas Ulin
Description:
Connectin api/mysqld during node restart, with ndb binlog setup, and performing db
operations, may cause restarting node to die with signal 8

How to repeat:
add code to ndbd to hold startphase 5 in SUMA
make sure some table is created in cluster
start node
connect mysqld
insert into table

=> starting node dies with signal 8
[4 Jan 2007 8:17] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/17603

ChangeSet@1.2079, 2007-01-04 09:17:14+01:00, jonas@perch.ndb.mysql.com +5 -0
  ndb - bug#25329
    better handling of restarting node wrt to SUB_START_REQ
    (mysql-5.1-wl2325-5.0 commit)
[4 Jan 2007 9:03] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/17605

ChangeSet@1.2359, 2007-01-04 10:03:11+01:00, jonas@perch.ndb.mysql.com +4 -0
  ndb - bug#25329
    Fix most obvious error in dict/suma error handling of events
[4 Jan 2007 10:14] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/17610

ChangeSet@1.2361, 2007-01-04 11:13:19+01:00, jonas@perch.ndb.mysql.com +1 -0
  ndb - bug#25329
    extra sledge hammer, (real 51)
    use dicklock to prevent SUB_START_REQ during node recovery
[11 Jan 2007 20:23] Jonas Oreland
pushed to 5.1-ndb
[24 Jan 2007 1:51] Tomas Ulin
pushed to 5.1.15
[25 Jan 2007 7:41] Jon Stephens
Thank you for your bug report. This issue has been committed to our source repository of
that product and will be incorporated into the next release.

If necessary, you can access the source repository and build the latest available
version, including the bug fix. More information about accessing the source trees is
available at

    http://dev.mysql.com/doc/en/installing-source.html

Documented bugfix in 5.1.15 changelog.