ndb - bug#25329   Fix most obvious error in dict/suma error handling of events

storage/ndb/src/kernel/blocks/dbdict/Dbdict.cpp:
  Fix most obvious error in dict/suma error handling of events
storage/ndb/src/kernel/blocks/dbdict/Dbdict.hpp:
  Fix most obvious error in dict/suma error handling of events
storage/ndb/src/kernel/blocks/suma/Suma.cpp:
  Fix most obvious error in dict/suma error handling of events
storage/ndb/src/kernel/blocks/suma/SumaInit.cpp:
  Fix most obvious error in dict/suma error handling of events